Ajout de tests pour le parent/enfant et stageDEsc/stageInst